[package]
name = "apiauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
lambda_runtime = "^0.7.2"
aws_lambda_events = "^0.7.3"
serde_json = "^1.0"
tokio = { version = "^1.24", features = ["macros"] }
chrono = "^0.4.23"
sha2 = "^0.10.6"
hex = "0.4.3"