[package]
name = "recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
lambda_runtime = "^0.7.2"
lambda_http = "^0.7.2"
aws-config = "^0.52.0"
aws-sdk-dynamodb = "^0.22.0"
serde_json = "^1.0"
chrono = "^0.4.23"
tokio = { version = "^1.24", features = ["macros"] }